# mdbook-autosummary

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: config.rs  lib.rs  logger.rs  main.rs  parser.rs
