[package]
name = "mdbook-autosummary"
version = "0.1.4"
edition = "2021"
authors = ["hypergonial"]
rust-version = "1.70"
description = "Generate SUMMARY.md files based on your book's file structure"
readme = "README.md"
repository = "https://github.com/hypergonial/mdbook-autosummary"
license = "MPL-2.0"
keywords = ["mdbook", "summary", "generator", "book"]
categories = ["parsing", "filesystem", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = "4.4.4"
env_logger = "0.10.0"
log = "0.4.20"
mdbook = "0.4.34"
path-slash = "0.2.1"
semver = "1.0.19"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sha2 = "0.10.7"
walkdir = "2.4.0"
