[package]
name = "mdbook-autosummary"
version = "0.1.8"
edition = "2021"
authors = ["hypergonial"]
rust-version = "1.70"
description = "Generate SUMMARY.md files based on your book's file structure"
readme = "README.md"
repository = "https://github.com/hypergonial/mdbook-autosummary"
license = "MPL-2.0"
keywords = ["mdbook", "summary", "generator", "book"]
categories = ["parsing", "filesystem", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = "4.5.4"
env_logger = "0.11.3"
log = "0.4.21"
mdbook = "0.4.40"
path-slash = "0.2.1"
semver = "1.0.23"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
walkdir = "2.5.0"

# Enable LTO for smaller binaries
[profile.release]
lto = true
