[package]
name = "mdbook-autosummary"
version = "0.1.9"
edition = "2024"
authors = ["hypergonial"]
rust-version = "1.85"
description = "Generate SUMMARY.md files based on your book's file structure"
readme = "README.md"
repository = "https://github.com/hypergonial/mdbook-autosummary"
license = "MPL-2.0"
keywords = ["mdbook", "summary", "generator", "book"]
categories = ["parsing", "filesystem", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = "4.5.31"
env_logger = "0.11.6"
log = "0.4.26"
mdbook = "0.4.45"
path-slash = "0.2.1"
percent-encoding = "2.3.1"
semver = "1.0.25"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"
sha2 = "0.10.8"
walkdir = "2.5.0"

# Enable LTO for smaller binaries
[profile.release]
lto = true
